--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -17,6 +17,7 @@
     <th>Authority</th>
     <th>Quiz</th>
     <th>Schedule</th>
+    <th>Requestable?</th>
     <th>Slots</th>
   </tr>
   </thead>
