--- a/app/views/positions/_position.html.erb
+++ b/app/views/positions/_position.html.erb
@@ -3,6 +3,7 @@
     <td><%=h position.authority %></td>
     <td><%=h position.quiz %></td>
     <td><%=h position.schedule %></td>
+    <td><%= position.requestable? ? 'Yes' : 'No' %></td>
     <td><%=h position.slots %></td>
     <td><%= link_to 'Show', position %></td>
     <td><%= link_to 'Edit', edit_position_path(position) %></td>
