--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -14,6 +14,8 @@
   <b>Schedule:</b> <%=h @position.schedule %>
 </p>
 
+<p><b>Requestable?</b> <%= @position.requestable? ? 'Yes' : 'No' %></p>
+
 <p>
   <b>Slots:</b> <%=h @position.slots %>
 </p>
