--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -3,7 +3,7 @@
   <%= form.input( :user_name, :label => 'User', :as => :string_with_auto_complete, :remote => {
     :url => users_path(:format => :js), :method => :get, :with => "'search[name_like]=' + element.value"
   } ) %>
-  <%= form.input :period %>
+  <%= form.input :period, :collection => form.object.position.schedule.periods %>
   <%= form.input :starts_at, :as => :ft_calendar_date_select %>
   <%= form.input :ends_at, :as => :ft_calendar_date_select %>
     <% form.object.designees.each do |designee| %>
