--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,10 +1,10 @@
 <h1>New request</h1>
 
-<% semantic_form_for(:request, @request, :url => position_requests_path(@request.position) ) do |f| %>
+<% semantic_form_for(:request, @request, :url => polymorphic_path([@request.requestable, :requests]) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
 <p>
-<%= link_to 'Back', position_requests_path( @request.position ) %>
+<%= link_to 'Back', polymorphic_path( [@request.requestable, :requests] ) %>
 </p>
 
