--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,5 +1,11 @@
+<% user ||= false; requestable ||= false %>
   <tr>
+    <% unless user %>
     <td><%=h request.user.name :last_first %></td>
+    <% end %>
+    <% unless requestable %>
+    <td><%=h request.requestable %></td>
+    <% end %>
     <td><%=h request.state %></td>
     <td><%= link_to 'Show', request %></td>
     <td><%= link_to 'Edit', edit_request_path(request) %></td>
