--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -5,3 +5,8 @@
 <% render :partial => 'memberships/memberships', :object => current_user.memberships.current %>
 <% end %>
 
+<% if current_user.requests.unexpired.length > 0 %>
+<h3>Current Requests</h3>
+<% render :partial => 'requests/requests', :object => current_user.requests.unexpired %>
+<% end %>
+
