Add listing of current requests and expired requests for user.

--- a/app/views/requests/_requests.html.erb
+++ b/app/views/requests/_requests.html.erb
@@ -1,8 +1,8 @@
 <% user ||= false; requestable ||= false %>
-<table>
+<table id="requests">
   <thead>
   <tr>
-    <% unless user%>
+    <% unless user %>
     <th>User</th>
     <% end %>
     <% unless requestable %>
