--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -2,11 +2,17 @@
 
 <% if current_user.memberships.current.length > 0 %>
 <h3>Current Memberships</h3>
-<% render :partial => 'memberships/memberships', :object => current_user.memberships.current %>
+<%= render :partial => 'memberships/memberships', :object => current_user.memberships.current %>
 <% end %>
 
 <% if current_user.requests.unexpired.length > 0 %>
 <h3>Current Requests</h3>
-<% render :partial => 'requests/requests', :object => current_user.requests.unexpired %>
+<%= render :partial => 'requests/requests', :object => current_user.requests.unexpired,
+  :locals => { :user => current_user } %>
+<% end %>
+
+
+<% if current_user.requests.expired.size > 0 %>
+You have <%= link_to pluralize(current_user.requests.expired.size, 'expired request'), expired_user_requests_path( current_user ) %>.
 <% end %>
 
