--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,22 +1,6 @@
 <h1>Listing quizzes</h1>
 
-<table>
-<thead>
-  <tr>
-    <th>Name</th>
-  </tr>
-</thead>
-<tbody>
-<% @quizzes.each do |quiz| %>
-  <tr>
-    <td><%=h quiz.name %></td>
-    <td><%= link_to 'Show', quiz %></td>
-    <td><%= link_to 'Edit', edit_quiz_path(quiz) %></td>
-    <td><%= link_to 'Destroy', quiz, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</tbody>
-</table>
+<%= render :partial => "quizzes", :object => @quizzes %>
 
 <br />
 
