Still wip for prioritizing requests.

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -5,7 +5,9 @@
 
 <br />
 
+<% if @requestable %>
 <p>
 <%= link_to 'New request', new_polymorphic_path( [@requestable, :request] ) %>
 </p>
+<% end %>
 
