--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -4,6 +4,9 @@
       :hint => 'When is the earliest date you are interested in serving?' %>
     <%= form.input :ends_at, :as => :ft_calendar_date_select, :label => 'Desired End Date',
       :hint => 'When is the latest date you are interested in serving?' %>
+    <%= form.input :move_to_id, :as => :select, :collection => form.object.move_to_options, :label => 'Move to',
+      :hint => 'Select the position among your unexpired requests that reflects '+
+      'your level of preference for this committee or position.', :html => { :allow_blank => true } %>
     <% form.object.answers.each do |answer| %>
       <% form.semantic_fields_for :answers, answer do |subform| %>
         <%= subform.input( :question_id, :as => :hidden ) if subform.object.new_record? %>
