Working ability to move around request priorities.

--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -7,6 +7,7 @@
     <td><%=h request.requestable %></td>
     <% end %>
     <td><%=h request.state %></td>
+    <td><%= request.position %></td>
     <td><%= link_to 'Show', request %></td>
     <td><%= link_to 'Edit', edit_request_path(request) %></td>
     <td><%= link_to 'Destroy', request, :confirm => 'Are you sure?', :method => :delete %></td>
