Add requestable flag for committees.

--- a/app/views/committees/_committee.html.erb
+++ b/app/views/committees/_committee.html.erb
@@ -1,5 +1,6 @@
   <tr>
     <td><%=h committee.name %></td>
+    <td><%= committee.requestable? ? 'Yes' : 'No' %></td>
     <td><%= link_to 'Show', committee %></td>
     <td><%= link_to 'Edit', edit_committee_path(committee) %></td>
     <td><%= link_to 'Destroy', committee, :confirm => 'Are you sure?', :method => :delete %></td>
