Add an option for committees to list requests.

--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -18,6 +18,7 @@
 <%= link_to 'Edit', edit_committee_path(@committee) %> |
 <%= link_to 'List Enrollments', committee_enrollments_path(@committee) %> |
 <%= link_to 'List Memberships', committee_memberships_path(@committee) %> |
+<%= link_to 'List Requests', committee_requests_path(@committee) %> |
 <%= link_to 'Back', committees_path %>
 </p>
 
