Show name of period when listing.

--- a/app/views/periods/index.html.erb
+++ b/app/views/periods/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing periods</h1>
+<h1>Listing periods for <%=h @schedule %></h1>
 
 <%= render :partial => 'periods', :object => @periods %>
 
