Add some useful display text in periods management.  Validate that requests are of a requestable that is requestable.  Implement Membership.to_s.  Provide method to look up staffable memberships for a given request.

--- a/app/views/periods/edit.html.erb
+++ b/app/views/periods/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing period</h1>
+<h1>Editing period for <%=h @period.schedule %></h1>
 
 <% semantic_form_for(@period) do |f| %>
   <%= render :partial => 'form', :object => f %>
