--- a/app/views/periods/new.html.erb
+++ b/app/views/periods/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New period</h1>
+<h1>New period for <%=h @schedule %></h1>
 
 <% semantic_form_for( :period, @period, :url => schedule_periods_path(@period.schedule) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
