Improve look of the application.

--- a/app/views/enrollments/edit.html.erb
+++ b/app/views/enrollments/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing enrollment</h1>
+<h2>Editing enrollment for <%=h @enrollment.committee %></h2>
 
 <% semantic_form_for(@enrollment) do |f| %>
   <%= render :partial => 'form', :object => f %>
