--- a/app/views/periods/_period.html.erb
+++ b/app/views/periods/_period.html.erb
@@ -1,4 +1,4 @@
-  <tr>
+  <% table_row_tag do %>
     <td><%=h period.starts_at.to_s :rfc822 %></td>
     <td><%=h period.ends_at.to_s :rfc822 %></td>
     <% unless read_only %>
@@ -6,5 +6,5 @@
     <td><%= link_to 'Edit', edit_period_path(period) %></td>
     <td><%= link_to 'Destroy', period, :confirm => 'Are you sure?', :method => :delete %></td>
     <% end %>
-  </tr>
+  <% end %>
 
