--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,5 +1,5 @@
 <% user ||= false; requestable ||= false %>
-  <tr>
+  <% table_row_tag do %>
     <% unless user %>
     <td><%=h request.user.name :last_first %></td>
     <% end %>
@@ -11,5 +11,5 @@
     <td><%= link_to 'Show', request %></td>
     <td><%= link_to 'Edit', edit_request_path(request) %></td>
     <td><%= link_to 'Destroy', request, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <% end %>
 
