--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-  <tr>
+  <% table_row_tag do %>
     <td><%=h user.name( :last_first ) %></td>
     <td><%=h user.net_id %></td>
     <td><%=h user.email %></td>
@@ -11,5 +11,5 @@
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <% end %>
 
