--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,4 @@
-<h1>User profile for <%= current_user.name %></h1>
+<h2>Welcome, <%= current_user.name %></h2>
 
 <% if current_user.memberships.current.length > 0 %>
 <h3>Current Memberships</h3>
