--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing answers</h1>
+<h2>Listing answers</h2>
 
 <table>
   <tr>
@@ -8,18 +8,18 @@
   </tr>
 
 <% @answers.each do |answer| %>
-  <tr>
+  <% table_row_tag do %>
     <td><%=h answer.question %></td>
     <td><%=h answer.request %></td>
     <td><%=h answer.content %></td>
     <td><%= link_to 'Show', answer %></td>
     <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
     <td><%= link_to 'Destroy', answer, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <% end %>
 <% end %>
 </table>
 
-<br />
+<hr />
 
 <%= link_to 'New answer', new_answer_path %>
 
