--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Listing enrollments</h1>
+<h2>Listing enrollments for <%=h @committee %></h2>
 
 <%= render :partial => "enrollments", :object => @enrollments %>
 
-<br />
+<hr />
 
 <p>
 <%= link_to 'New enrollment', new_committee_enrollment_path( @committee ) %>
