--- a/app/views/enrollments/new.html.erb
+++ b/app/views/enrollments/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New enrollment</h1>
+<h2>New enrollment for <%=h @enrollment.committee %></h2>
 
 <% semantic_form_for(:enrollment, @enrollment, :url => committee_enrollments_path(@enrollment.committee) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
