--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New membership</h1>
+<h2>New membership for <%=h @membership.position %></h2>
 
 <% semantic_form_for(:membership, @membership, :url => polymorphic_path( [ @membership.context, :memberships ] ) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
