--- a/app/views/positions/_position.html.erb
+++ b/app/views/positions/_position.html.erb
@@ -1,4 +1,4 @@
-  <tr>
+  <% table_row_tag do %>
     <td><%=h position.name %></td>
     <td><%=h position.authority %></td>
     <td><%=h position.quiz %></td>
@@ -8,5 +8,5 @@
     <td><%= link_to 'Show', position %></td>
     <td><%= link_to 'Edit', edit_position_path(position) %></td>
     <td><%= link_to 'Destroy', position, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <% end %>
 
