--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,9 +1,9 @@
-  <tr>
+  <% table_row_tag do %>
     <td><%=h question.name %></td>
     <td><%=h question.content %></td>
     <td><%=h question.global %></td>
     <td><%= link_to 'Show', question %></td>
     <td><%= link_to 'Edit', edit_question_path(question) %></td>
     <td><%= link_to 'Destroy', question, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <% end %>
 
