--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing user</h2>
 
-<% semantic_form_for(@user) do |f| %>
+<% semantic_form_for(@user, :multipart => true) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
