--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,4 +1,4 @@
-<h2>New request</h2>
+<h2>New request for <%=h @request.requestable %></h2>
 
 <% semantic_form_for(:request, @request, :url => polymorphic_path([@request.requestable, :requests]),
   :multipart => true ) do |f| %>
