--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,7 +1,7 @@
 <h2>New request for <%=h @request.requestable %></h2>
 
 <% semantic_form_for(:request, @request, :url => polymorphic_path([@request.requestable, :requests]),
-  :multipart => true ) do |f| %>
+  :html => { :multipart => true } ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
