Add ability to select format of questions and include content of the questions in the request answers.

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,6 +3,10 @@
 </p>
 
 <p>
+  <b>Format:</b> <%=h Question::ALLOWED_FORMATS.invert[@question.format] %>
+</p>
+
+<p>
   <b>Content:</b>
 </p>
 <%=markdown @question.content %>
