--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,6 +1,8 @@
   <%= form.error_messages %>
   <% form.inputs do %>
   <%= form.input :name %>
+  <%= form.input :format, :as => :select, :collection => Question::ALLOWED_FORMATS,
+    :hint => 'How should the question be presented to the user?' %>
   <%= form.input :content %>
   <%= form.input :global, :as => :radio %>
   <% end %>
