Add committee for authorities so members can be authorized to view requests under that authority.

--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -2,6 +2,10 @@
   <b>Name:</b> <%=h @authority.name %>
 </p>
 
+<p>
+  <b>Committee:</b> <%=h @authority.committee %>
+</p>
+
 <p><b>Join message:</b></p>
 
 <%=markdown @authority.join_message %>
