Fix issue in membership partial

--- a/app/views/memberships/_memberships.html.erb
+++ b/app/views/memberships/_memberships.html.erb
@@ -12,7 +12,7 @@
   </tr>
   </thead>
   <tbody>
-<%= render :partial => "membership", :collection => memberships,
+<%= render :partial => "memberships/membership", :collection => memberships,
   :locals => { :committee => defined?(committee) ? committee : false } %>
   </tbody>
 </table>
