--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,10 +1,16 @@
-<h2>Listing enrollments for <%=h @committee %></h2>
+<h2>Listing enrollments for <%=h @committee ? @committee : "" %><%=h( @user ? @user : "" ) %></h2>
 
-<%= render :partial => "enrollments", :object => @enrollments %>
+<%= render :partial => "enrollments", :object => @enrollments,
+  :locals => { :committee => @committee ? @committee : false, :position => @user ? true : false } %>
 
 <hr />
 
 <p>
+<% if @committee %>
 <%= link_to 'New enrollment', new_committee_enrollment_path( @committee ) %>
+<% end %>
+<% if @user %>
+<%= link_to @user.to_s, user_path( @user ) %>
+<% end %>
 </p>
 
