--- a/app/views/memberships/_membership.html.erb
+++ b/app/views/memberships/_membership.html.erb
@@ -1,5 +1,7 @@
   <% table_row_tag do %>
+    <% unless user -%>
     <td><%= membership.user ? h(membership.user) : "<i>unassigned</i>" %></td>
+    <% end -%>
     <td><%=h membership.period %></td>
     <td><%=h membership.starts_at.to_s :rfc822 %></td>
     <td><%=h membership.ends_at.to_s :rfc822 %></td>
