--- a/app/views/memberships/_memberships.html.erb
+++ b/app/views/memberships/_memberships.html.erb
@@ -1,7 +1,10 @@
+<% user ||= false %>
 <table>
   <thead>
   <tr>
+    <% unless user %>
     <th>User</th>
+    <% end %>
     <th>Period</th>
     <th>Starts at</th>
     <th>Ends at</th>
@@ -13,7 +16,7 @@
   </thead>
   <tbody>
 <%= render :partial => "memberships/membership", :collection => memberships,
-  :locals => { :committee => defined?(committee) ? committee : false } %>
+  :locals => { :committee => defined?(committee) ? committee : false, :user => user } %>
   </tbody>
 </table>
 
