Describe listings better.

--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Listing memberships<%=h( if @committee
+<h2><%=h params[:action].titleize %> memberships<%=h( if @committee
 " for #{@committee}"
 elsif @user
 " for #{@user}"
