--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Listing enrollments for <%=h @committee ? @committee : "" %><%=h( @user ? @user : "" ) %></h2>
+<h2><%=h params[:action].titleize %> enrollments for <%=h @committee ? @committee : "" %><%=h( @user ? @user : "" ) %></h2>
 
 <%= render :partial => "enrollments", :object => @enrollments,
   :locals => { :committee => @committee ? @committee : false, :position => @user ? true : false } %>
