--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,18 +1,9 @@
-<h2><%=h params[:action].titleize %> memberships<%=h( if @committee
-" for #{@committee}"
-elsif @user
-" for #{@user}"
-elseif @position
-" for #{@position}"
-end ) %></h2>
+<h2><%=h params[:action].titleize %> memberships<%=h @committee ?  " for #{@committee}" : "" %><%=h @user ?  " for #{@user}" : "" %><%=h @position ?  " for #{@position}" : "" %></h2>
 
 <%= will_paginate @memberships %>
 
-<% if @committee %>
-<%= render :partial => "memberships", :object => @memberships, :locals => { :committee => @committee } %>
-<% else %>
-<%= render :partial => "memberships", :object => @memberships %>
-<% end %>
+<%= render :partial => 'memberships', :object => @memberships,
+  :locals => { :committee => @committee, :user => @user, :position => @position } %>
 
 <%= will_paginate @memberships %>
 
