Add renewable flag for positions.

--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -16,6 +16,8 @@
 
 <p><b>Requestable?</b> <%= @position.requestable? ? 'Yes' : 'No' %></p>
 
+<p><b>Renewable?</b> <%= @position.renewable? ? 'Yes' : 'No' %></p>
+
 <p>
   <b>Slots:</b> <%=h @position.slots %>
 </p>
