--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -18,6 +18,7 @@
     <th>Quiz</th>
     <th>Schedule</th>
     <th>Requestable?</th>
+    <th>Renewable?</th>
     <th>Slots</th>
   </tr>
   </thead>
