Enable listing of positions for a committee

--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -18,6 +18,7 @@
 <%= link_to 'Edit', edit_committee_path(@committee) %> |
 <%= nested_index @committee, 'memberships', %w( past current future ) %> |
 <%= nested_index @committee, 'enrollments' %> |
+<%= link_to 'List Positions', committee_positions_path(@committee) %> |
 <%= link_to 'List Requests', committee_requests_path(@committee) %> |
 <%= link_to 'Back', committees_path %>
 </p>
