--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= params[:action].titleize %> committees</h2>
+<h2><%= params[:action].titleize %> committees<%= @user ? " for #{h(@user)}" : "" %></h2>
 
 <% semantic_form_for @search do |form| %>
 <p>
